Fix figcaption overflowing text issue

--- a/assets/css/admin/editor.css
+++ b/assets/css/admin/editor.css
@@ -599,6 +599,7 @@ p.wp-block-subhead {
 	font-size: 0.85em;
 	font-style: italic;
 	text-align: center;
+	word-break: break-all;
 }
 
 .wp-block-gallery {
